3. One-ticket Probability

--- a/A-mobile-app-for-lottery-addiction/basic.ipynb
+++ b/A-mobile-app-for-lottery-addiction/basic.ipynb
@@ -18,28 +18,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d1adf5",
+   "id": "75546cec",
    "metadata": {},
    "source": [
     "### Core Functions\n",
     "\n",
     "In the 6/49 lottery, six numbers are drawn from a set of 49 numbers that range from 1 to 49. The drawing is done without replacement, which means once a number is drawn, it's not put back in the set.\n",
     "\n",
-    "We'll use two principal function for cal"
+    "We'll use two principal function for calculate `factorial` and `combinations`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63a46cbf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "c6a77008",
+   "execution_count": 3,
+   "id": "4ce4e39a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "13bebc88",
+   "execution_count": 4,
+   "id": "0ba9fcaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +73,65 @@
     "    2598960.0\n",
     "    \"\"\"\n",
     "    return factorial(n) / (factorial(k) * factorial(n - k))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3c2a113",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "091a4b79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_ticket_probability(numbers):\n",
+    "    outcomes = combinations(49, 6)\n",
+    "    successful_outcome = 1 / outcomes\n",
+    "    percentage_win = successful_outcome * 100\n",
+    "    print(f'The probability of the combination {numbers} winning the grand prize is {percentage_win} % (1 / i)')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7cbefb15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.151123842018516e-08\n",
+      "The probability of the combination ['13', '17', '19', '10', '30', '43'] winning the grand prize is 7.151123842018516e-06 % (1 / 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_ticket_probability(['13', '17', '19', '10', '30', '43'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "296c0c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of the combination ['3', '1', '4', '1', '6', '5'] winning the grand prize is 7.151123842018516e-06 %.\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_ticket_probability(['3', '1', '4', '1', '6', '5'])"
    ]
   }
  ],
