--- a/A-mobile-app-for-lottery-addiction/basic.ipynb
+++ b/A-mobile-app-for-lottery-addiction/basic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75546cec",
+   "id": "9b56b75f",
    "metadata": {},
    "source": [
     "### Core Functions\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ce4e39a",
+   "id": "c00733f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0ba9fcaa",
+   "id": "8c95f07b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,17 +76,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3c2a113",
+   "cell_type": "markdown",
+   "id": "d371a1be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##  One-ticket Probability\n",
+    "We discussed with the engineering team of the medical institute, and they told us we need to be aware of the following details when we write the function:\n",
+    "\n",
+    "- Inside the app, the user inputs six different numbers from 1 to 49.\n",
+    "- Under the hood, the six numbers will come as a Python list, which will serve as the single input to our function.\n",
+    "- The engineering team wants the function to print the probability value in a friendly way — in a way that people without any probability training are able to understand."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "091a4b79",
+   "execution_count": 27,
+   "id": "b67d5de5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,21 +99,20 @@
     "    outcomes = combinations(49, 6)\n",
     "    successful_outcome = 1 / outcomes\n",
     "    percentage_win = successful_outcome * 100\n",
-    "    print(f'The probability of the combination {numbers} winning the grand prize is {percentage_win} % (1 / i)')    "
+    "    print(f'The probability of the numbers {numbers} winning the grand prize is {percentage_win} % (1 / {int(outcomes)} possible combinations)')    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "7cbefb15",
+   "execution_count": 28,
+   "id": "61f85bd2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.151123842018516e-08\n",
-      "The probability of the combination ['13', '17', '19', '10', '30', '43'] winning the grand prize is 7.151123842018516e-06 % (1 / 0)\n"
+      "The probability of the numbers ['13', '17', '19', '10', '30', '43'] winning the grand prize is 7.151123842018516e-06 % (1 / 13983816 possible combinations)\n"
      ]
     }
    ],
@@ -118,20 +122,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "296c0c41",
+   "execution_count": 29,
+   "id": "539caf58",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of the combination ['3', '1', '4', '1', '6', '5'] winning the grand prize is 7.151123842018516e-06 %.\n"
+      "The probability of the numbers ['3', '1', '4', '1', '6', '5'] winning the grand prize is 7.151123842018516e-06 % (1 / 13983816 possible combinations)\n"
      ]
     }
    ],
    "source": [
     "one_ticket_probability(['3', '1', '4', '1', '6', '5'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b74d48bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "47033e71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "lottery = pd.read_csv('649.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0ec84330",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3665, 11)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lottery.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6fbbbb30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRODUCT</th>\n",
+       "      <th>DRAW NUMBER</th>\n",
+       "      <th>SEQUENCE NUMBER</th>\n",
+       "      <th>DRAW DATE</th>\n",
+       "      <th>NUMBER DRAWN 1</th>\n",
+       "      <th>NUMBER DRAWN 2</th>\n",
+       "      <th>NUMBER DRAWN 3</th>\n",
+       "      <th>NUMBER DRAWN 4</th>\n",
+       "      <th>NUMBER DRAWN 5</th>\n",
+       "      <th>NUMBER DRAWN 6</th>\n",
+       "      <th>BONUS NUMBER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>649</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/12/1982</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>41</td>\n",
+       "      <td>43</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>649</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/19/1982</td>\n",
+       "      <td>8</td>\n",
+       "      <td>33</td>\n",
+       "      <td>36</td>\n",
+       "      <td>37</td>\n",
+       "      <td>39</td>\n",
+       "      <td>41</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>649</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/26/1982</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>27</td>\n",
+       "      <td>39</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7/3/1982</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>20</td>\n",
+       "      <td>43</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>649</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7/10/1982</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>21</td>\n",
+       "      <td>31</td>\n",
+       "      <td>34</td>\n",
+       "      <td>47</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PRODUCT  DRAW NUMBER  SEQUENCE NUMBER  DRAW DATE  NUMBER DRAWN 1  \\\n",
+       "0      649            1                0  6/12/1982               3   \n",
+       "1      649            2                0  6/19/1982               8   \n",
+       "2      649            3                0  6/26/1982               1   \n",
+       "3      649            4                0   7/3/1982               3   \n",
+       "4      649            5                0  7/10/1982               5   \n",
+       "\n",
+       "   NUMBER DRAWN 2  NUMBER DRAWN 3  NUMBER DRAWN 4  NUMBER DRAWN 5  \\\n",
+       "0              11              12              14              41   \n",
+       "1              33              36              37              39   \n",
+       "2               6              23              24              27   \n",
+       "3               9              10              13              20   \n",
+       "4              14              21              31              34   \n",
+       "\n",
+       "   NUMBER DRAWN 6  BONUS NUMBER  \n",
+       "0              43            13  \n",
+       "1              41             9  \n",
+       "2              39            34  \n",
+       "3              43            34  \n",
+       "4              47            45  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lottery.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1c5f92d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRODUCT</th>\n",
+       "      <th>DRAW NUMBER</th>\n",
+       "      <th>SEQUENCE NUMBER</th>\n",
+       "      <th>DRAW DATE</th>\n",
+       "      <th>NUMBER DRAWN 1</th>\n",
+       "      <th>NUMBER DRAWN 2</th>\n",
+       "      <th>NUMBER DRAWN 3</th>\n",
+       "      <th>NUMBER DRAWN 4</th>\n",
+       "      <th>NUMBER DRAWN 5</th>\n",
+       "      <th>NUMBER DRAWN 6</th>\n",
+       "      <th>BONUS NUMBER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3660</th>\n",
+       "      <td>649</td>\n",
+       "      <td>3587</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/6/2018</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>23</td>\n",
+       "      <td>38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>41</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3661</th>\n",
+       "      <td>649</td>\n",
+       "      <td>3588</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/9/2018</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>46</td>\n",
+       "      <td>47</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3662</th>\n",
+       "      <td>649</td>\n",
+       "      <td>3589</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/13/2018</td>\n",
+       "      <td>6</td>\n",
+       "      <td>22</td>\n",
+       "      <td>24</td>\n",
+       "      <td>31</td>\n",
+       "      <td>32</td>\n",
+       "      <td>34</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3663</th>\n",
+       "      <td>649</td>\n",
+       "      <td>3590</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/16/2018</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>31</td>\n",
+       "      <td>38</td>\n",
+       "      <td>49</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3664</th>\n",
+       "      <td>649</td>\n",
+       "      <td>3591</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6/20/2018</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>31</td>\n",
+       "      <td>35</td>\n",
+       "      <td>37</td>\n",
+       "      <td>48</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      PRODUCT  DRAW NUMBER  SEQUENCE NUMBER  DRAW DATE  NUMBER DRAWN 1  \\\n",
+       "3660      649         3587                0   6/6/2018              10   \n",
+       "3661      649         3588                0   6/9/2018              19   \n",
+       "3662      649         3589                0  6/13/2018               6   \n",
+       "3663      649         3590                0  6/16/2018               2   \n",
+       "3664      649         3591                0  6/20/2018              14   \n",
+       "\n",
+       "      NUMBER DRAWN 2  NUMBER DRAWN 3  NUMBER DRAWN 4  NUMBER DRAWN 5  \\\n",
+       "3660              15              23              38              40   \n",
+       "3661              25              31              36              46   \n",
+       "3662              22              24              31              32   \n",
+       "3663              15              21              31              38   \n",
+       "3664              24              31              35              37   \n",
+       "\n",
+       "      NUMBER DRAWN 6  BONUS NUMBER  \n",
+       "3660              41            35  \n",
+       "3661              47            26  \n",
+       "3662              34            16  \n",
+       "3663              49             8  \n",
+       "3664              48            17  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lottery.tail()"
    ]
   }
  ],
