5. Function for Historical Data Check

--- a/A-mobile-app-for-lottery-addiction/basic.ipynb
+++ b/A-mobile-app-for-lottery-addiction/basic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b56b75f",
+   "id": "163eb5fd",
    "metadata": {},
    "source": [
     "### Core Functions\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c00733f3",
+   "id": "02cdd40f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c95f07b",
+   "id": "c2533d53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d371a1be",
+   "id": "0f0e7f1b",
    "metadata": {},
    "source": [
     "##  One-ticket Probability\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b67d5de5",
+   "id": "1a03b954",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "61f85bd2",
+   "id": "2a3da6e6",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "539caf58",
+   "id": "dd4f4e69",
    "metadata": {},
    "outputs": [
     {
@@ -139,17 +139,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b74d48bf",
+   "cell_type": "markdown",
+   "id": "e05cdf73",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Historical Data Check for Canada Lottery\n",
+    "Users should also be able to compare their ticket against the historical lottery data in Canada and determine whether they would have ever won by now.\n",
+    "\n",
+    "We'll focus on exploring the historical data coming from the Canada 6/49 lottery. The data set can be downloaded from [Kaggle](https://www.kaggle.com/datascienceai/lottery-dataset) and it has the following structure:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "47033e71",
+   "id": "09ecd885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0ec84330",
+   "id": "6a2549a2",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6fbbbb30",
+   "id": "67f0e4e6",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1c5f92d6",
+   "id": "d05c0d06",
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +473,135 @@
    ],
    "source": [
     "lottery.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91e9cdfc",
+   "metadata": {},
+   "source": [
+    "##  Function for Historical Data Check\n",
+    "\n",
+    "We're going to write a function that will enable users to compare their ticket against the historical lottery data in Canada and determine whether they would have ever won by now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8a40996",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "We'll wiit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "aee3ecd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 41, 11, 12, 43, 14}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_numbers(row: pd.Series):\n",
+    "    return {i for i in row[4:10]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "17a6b5ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        {3, 41, 11, 12, 43, 14}\n",
+       "1        {33, 36, 37, 39, 8, 41}\n",
+       "2         {1, 6, 39, 23, 24, 27}\n",
+       "3         {3, 9, 10, 43, 13, 20}\n",
+       "4        {34, 5, 14, 47, 21, 31}\n",
+       "                  ...           \n",
+       "3660    {38, 40, 41, 10, 15, 23}\n",
+       "3661    {36, 46, 47, 19, 25, 31}\n",
+       "3662     {32, 34, 6, 22, 24, 31}\n",
+       "3663     {2, 38, 15, 49, 21, 31}\n",
+       "3664    {35, 37, 14, 48, 24, 31}\n",
+       "Length: 3665, dtype: object"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "winning_numbers = lottery.apply(extract_numbers, axis=1)\n",
+    "winning_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "563fb182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_historical_occurence(user_numbers:[int], winning_combinations:pd.Series):\n",
+    "    numbers = set(user_numbers)\n",
+    "    winning_matches = winning_combinations == numbers\n",
+    "    count_matches = winning_matches.sum()\n",
+    "    if count_matches:\n",
+    "        print(f'In the past the combination {user_numbers} occurred in the past {count_matches} time(s).')\n",
+    "    else:\n",
+    "        print(f'In the past the combination {user_numbers} never occurred in the past.')\n",
+    "    \n",
+    "    print('With the combination you selected, you have 1 in 13,983,816 possibilities to win the big price.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "52f455d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the past the combination [3, 11, 12, 14, 41, 43] occurred in the past 1 time(s).\n",
+      "With the combination you selected, you have 1 in 13,983,816 possibilities to win the big price.\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_historical_occurence([3, 11, 12, 14, 41, 43], winning_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "c1a2f688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the past the combination [13, 17, 19, 30, 10, 30] never occurred in the past.\n",
+      "With the combination you selected, you have 1 in 13,983,816 possibilities to win the big price.\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_historical_occurence([13, 17, 19, 30, 10, 30], winning_numbers)"
    ]
   }
  ],
