--- a/A-mobile-app-for-lottery-addiction/basic.ipynb
+++ b/A-mobile-app-for-lottery-addiction/basic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163eb5fd",
+   "id": "fc987888",
    "metadata": {},
    "source": [
     "### Core Functions\n",
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "02cdd40f",
+   "execution_count": 23,
+   "id": "5c0445fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +47,15 @@
     "    >>> factorial(5)\n",
     "    120\n",
     "    \"\"\"\n",
-    "    if n == 2:\n",
-    "        return 2\n",
+    "    if n == 1:\n",
+    "        return 1\n",
     "    return n * factorial(n - 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c2533d53",
+   "execution_count": 2,
+   "id": "93d0cb26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0e7f1b",
+   "id": "57b92b61",
    "metadata": {},
    "source": [
     "##  One-ticket Probability\n",
@@ -90,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "1a03b954",
+   "execution_count": 3,
+   "id": "619d6522",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,20 +99,22 @@
     "    outcomes = combinations(49, 6)\n",
     "    successful_outcome = 1 / outcomes\n",
     "    percentage_win = successful_outcome * 100\n",
-    "    print(f'The probability of the numbers {numbers} winning the grand prize is {percentage_win} % (1 / {int(outcomes)} possible combinations)')    "
+    "    print(f'The probability of the numbers {numbers} winning the grand prize is {percentage_win:.6f}%.')\n",
+    "    print(f'You have 1 in  {outcomes:,} chances to win.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "2a3da6e6",
+   "execution_count": 4,
+   "id": "d30045be",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of the numbers ['13', '17', '19', '10', '30', '43'] winning the grand prize is 7.151123842018516e-06 % (1 / 13983816 possible combinations)\n"
+      "The probability of the numbers ['13', '17', '19', '10', '30', '43'] winning the grand prize is 0.000007%.\n",
+      "You have 1 in  13,983,816.0 chances to win.\n"
      ]
     }
    ],
@@ -122,15 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "dd4f4e69",
+   "execution_count": 5,
+   "id": "0dfd4b7d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of the numbers ['3', '1', '4', '1', '6', '5'] winning the grand prize is 7.151123842018516e-06 % (1 / 13983816 possible combinations)\n"
+      "The probability of the numbers ['3', '1', '4', '1', '6', '5'] winning the grand prize is 0.000007%.\n",
+      "You have 1 in  13,983,816.0 chances to win.\n"
      ]
     }
    ],
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05cdf73",
+   "id": "c3e613fd",
    "metadata": {},
    "source": [
     "## Historical Data Check for Canada Lottery\n",
@@ -151,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "09ecd885",
+   "execution_count": 6,
+   "id": "a55987fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "6a2549a2",
+   "execution_count": 7,
+   "id": "2a887a87",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +175,7 @@
        "(3665, 11)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "67f0e4e6",
+   "execution_count": 8,
+   "id": "1f20bf1e",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +322,7 @@
        "4              47            45  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,8 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "d05c0d06",
+   "execution_count": 9,
+   "id": "78eb4497",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +469,7 @@
        "3664              48            17  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e9cdfc",
+   "id": "1a4d3524",
    "metadata": {},
    "source": [
     "##  Function for Historical Data Check\n",
@@ -486,29 +489,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8a40996",
+   "cell_type": "markdown",
+   "id": "355098d9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "We'll wiit"
+    "We'll define a function that takes as input a row of the lottery dataframe and returns a set containing all the six winning numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "aee3ecd7",
+   "execution_count": 10,
+   "id": "20d73181",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{3, 41, 11, 12, 43, 14}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def extract_numbers(row: pd.Series):\n",
     "    return {i for i in row[4:10]}"
@@ -516,8 +509,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "17a6b5ed",
+   "execution_count": 11,
+   "id": "ababfc34",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +530,7 @@
        "Length: 3665, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,8 +542,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "563fb182",
+   "execution_count": 12,
+   "id": "13d46d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +552,7 @@
     "    winning_matches = winning_combinations == numbers\n",
     "    count_matches = winning_matches.sum()\n",
     "    if count_matches:\n",
-    "        print(f'In the past the combination {user_numbers} occurred in the past {count_matches} time(s).')\n",
+    "        print(f'In the past the combination {user_numbers:} occurred in the past {count_matches} time(s).')\n",
     "    else:\n",
     "        print(f'In the past the combination {user_numbers} never occurred in the past.')\n",
     "    \n",
@@ -568,8 +561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "52f455d0",
+   "execution_count": 13,
+   "id": "8de6d51e",
    "metadata": {},
    "outputs": [
     {
@@ -587,8 +580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "c1a2f688",
+   "execution_count": 14,
+   "id": "bef2b279",
    "metadata": {},
    "outputs": [
     {
@@ -602,6 +595,173 @@
    ],
    "source": [
     "check_historical_occurence([13, 17, 19, 30, 10, 30], winning_numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d67ec492",
+   "metadata": {},
+   "source": [
+    "##  Multi-ticket Probability\n",
+    "\n",
+    "Lottery addicts usually play more than one ticket on a single drawing, thinking that this might increase their chances of winning significantly. Our purpose is to help them better estimate their chances of winning. We're going to write a function that will allow the users to calculate the chances of winning for any number of different tickets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "93b48f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multi_ticket_probability(number_tickets:int):\n",
+    "    outcomes = combinations(49, 6) \n",
+    "    probability = number_tickets / outcomes\n",
+    "    probability_presentable = probability * 100\n",
+    "    \n",
+    "    print(f'With {number_tickets:,} ticket(s) you have a probability of winning of {probability_presentable:.6f}%.') \n",
+    "    print(f'You have {number_tickets:,} in  {outcomes:,} chances to win.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "42608650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With 1 ticket(s) you have a probability of winning of 0.000007%.\n",
+      "You have 1 in  13,983,816.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "With 10 ticket(s) you have a probability of winning of 0.000072%.\n",
+      "You have 10 in  13,983,816.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "With 100 ticket(s) you have a probability of winning of 0.000715%.\n",
+      "You have 100 in  13,983,816.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "With 10,000 ticket(s) you have a probability of winning of 0.071511%.\n",
+      "You have 10,000 in  13,983,816.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "With 1,000,000 ticket(s) you have a probability of winning of 7.151124%.\n",
+      "You have 1,000,000 in  13,983,816.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "With 6,991,908 ticket(s) you have a probability of winning of 50.000000%.\n",
+      "You have 6,991,908 in  13,983,816.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "With 13,983,816 ticket(s) you have a probability of winning of 100.000000%.\n",
+      "You have 13,983,816 in  13,983,816.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [1, 10, 100, 10000, 1000000, 6991908, 13983816]\n",
+    "\n",
+    "for t in test:\n",
+    "    multi_ticket_probability(t)\n",
+    "    print('\\n---------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0476ec",
+   "metadata": {},
+   "source": [
+    "## Less Winning Numbers — Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a574b816",
+   "metadata": {},
+   "source": [
+    "For extra context, in most 6/49 lotteries there are smaller prizes if a player's ticket match two, three, four, or five of the six numbers drawn. As a consequence, the users might be interested in knowing the probability of having two, three, four, or five winning numbers.\n",
+    "\n",
+    "These are the engineering details we'll need to be aware of:\n",
+    "\n",
+    "- Inside the app, the user inputs:\n",
+    "  - six different numbers from 1 to 49; and\n",
+    "  - an integer between 2 and 5 that represents the number of winning numbers expected\n",
+    "- Our function prints information about the probability of having the inputted number of winning numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "da3ce94b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def probability_less_6(winning_numbers:int):\n",
+    "    outcomes = combinations(49, 6)\n",
+    "    \n",
+    "    number_combinations = combinations(6, winning_numbers)\n",
+    "    \n",
+    "    non_winning_numbers = 49 - 6\n",
+    "    remaining_object_take = 6 - winning_numbers\n",
+    "    combinations_remaining = combinations(non_winning_numbers,remaining_object_take)\n",
+    "    print()\n",
+    "    successful_outcomes = number_combinations * combinations_remaining\n",
+    "\n",
+    "    probability = successful_outcomes / outcomes\n",
+    "    probability_presentable = probability * 100\n",
+    "    \n",
+    "    scale_combinations = round(outcomes/successful_outcomes)    \n",
+    "\n",
+    "    \n",
+    "    print(f'The probabilities that you have {winning_numbers} winning numbers are {probability_presentable:.6f}%.')\n",
+    "    print(f'You have 1 in  {scale_combinations:,} chances to win.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "f994f75a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The probabilities that you have 2 winning numbers are 13.237803%.\n",
+      "You have 1 in  1,851,150.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "\n",
+      "The probabilities that you have 3 winning numbers are 1.765040%.\n",
+      "You have 1 in  246,820.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "\n",
+      "The probabilities that you have 4 winning numbers are 0.096862%.\n",
+      "You have 1 in  13,545.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n",
+      "\n",
+      "The probabilities that you have 5 winning numbers are 0.001845%.\n",
+      "You have 1 in  258.0 chances to win.\n",
+      "\n",
+      "---------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [2, 3, 4, 5]\n",
+    "\n",
+    "for t in test:\n",
+    "    probability_less_6(t)\n",
+    "    print('\\n---------------------------------------')"
    ]
   }
  ],
