--- a/Building-a-spam-filter-with-naive-bayes/basic.ipynb
+++ b/Building-a-spam-filter-with-naive-bayes/basic.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "268ad35e",
+   "id": "e97bbcb5",
    "metadata": {},
    "source": [
-    "# Building a Spam Filter with Naive Bayes"
+    "# Building a Spam Filter with Naive Bayes\n",
+    "\n",
+    "We're going to study the practical side of the algorithm by building a spam filter for SMS messages.\n",
+    "\n",
+    "To classify messages as spam or non-spam, we saw in the previous lesson that the computer:\n",
+    "\n",
+    "- Learns how humans classify messages.\n",
+    "- Uses that human knowledge to estimate probabilities for new messages — probabilities for spam and non-spam.\n",
+    "- Classifies a new message based on these probability values — if the probability for spam is greater, then it classifies the message as spam. Otherwise, it classifies it as non-spam (if the two probability values are equal, then we may need a human to classify the message).\n",
+    "\n",
+    "So our first task is to \"teach\" the computer how to classify messages. To do that, we'll use the multinomial Naive Bayes algorithm along with a dataset of 5,572 SMS messages that are already classified by humans. You can also download the dataset directly from this [link](https://dq-content.s3.amazonaws.com/433/SMSSpamCollection)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0ffd1e5f",
+   "id": "bcc5c678",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "913b37cf",
+   "id": "b575bd51",
    "metadata": {},
    "outputs": [
     {
@@ -112,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7516546f",
+   "execution_count": 8,
+   "id": "3519604e",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +134,7 @@
        "Name: Label, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,6 +142,107 @@
    "source": [
     "sms['Label'].value_counts(normalize=True) * 100"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7a371e",
+   "metadata": {},
+   "source": [
+    "## Training and Test Set\n",
+    "\n",
+    "Now that we've become a bit familiar with the dataset, we can move on to building the spam filter.\n",
+    "\n",
+    "However, before creating it, it's very helpful to first think of a way of testing how well it works. When creating software (a spam filter is software), a good rule of thumb is that designing the test comes before creating the software. If we write the software first, then it's tempting to come up with a biased test just to make sure the software passes it.\n",
+    "\n",
+    "Once our spam filter is done, we'll need to test how good it is with classifying new messages. To test the spam filter, we're first going to split our dataset into two categories:\n",
+    "\n",
+    "- A training set, which we'll use to \"train\" the computer how to classify messages.\n",
+    "- A test set, which we'll use to test how good the spam filter is with classifying new messages.\n",
+    "\n",
+    "We're going to keep 80% of our dataset for training, and 20% for testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d7e77b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ham     86.53803\n",
+       "spam    13.46197\n",
+       "Name: Label, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sms_random = sms.sample(frac=1, random_state=1)\n",
+    "size = sms_random.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "096aea6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ham     86.53803\n",
+       "spam    13.46197\n",
+       "Name: Label, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training = sms_random.iloc[:int(size/100*80)]\n",
+    "training.reset_index()\n",
+    "training['Label'].value_counts(normalize=True) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3a8bbe48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ham     86.816143\n",
+       "spam    13.183857\n",
+       "Name: Label, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = sms_random.iloc[int(size/100*80):]\n",
+    "test.reset_index()\n",
+    "test['Label'].value_counts(normalize=True) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bdc0a42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
