3. Letter Case and Punctuation

--- a/Building-a-spam-filter-with-naive-bayes/basic.ipynb
+++ b/Building-a-spam-filter-with-naive-bayes/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e97bbcb5",
+   "id": "a56633cc",
    "metadata": {},
    "source": [
     "# Building a Spam Filter with Naive Bayes\n",
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bcc5c678",
+   "execution_count": 1,
+   "id": "c4971417",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b575bd51",
+   "execution_count": 2,
+   "id": "c88af916",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "(5572, 2)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3519604e",
+   "execution_count": 3,
+   "id": "2767d737",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "Name: Label, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7a371e",
+   "id": "2375f6f3",
    "metadata": {},
    "source": [
     "## Training and Test Set\n",
@@ -164,23 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d7e77b20",
+   "execution_count": 4,
+   "id": "c218c3ed",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ham     86.53803\n",
-       "spam    13.46197\n",
-       "Name: Label, dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sms_random = sms.sample(frac=1, random_state=1)\n",
     "size = sms_random.shape[0]"
@@ -188,8 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "096aea6c",
+   "execution_count": 5,
+   "id": "b6216fec",
    "metadata": {},
    "outputs": [
     {
@@ -200,21 +187,21 @@
        "Name: Label, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "training = sms_random.iloc[:int(size/100*80)]\n",
+    "training = sms_random.iloc[:int(size/100*80)].copy()\n",
     "training.reset_index()\n",
     "training['Label'].value_counts(normalize=True) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "3a8bbe48",
+   "execution_count": 6,
+   "id": "3fd7a455",
    "metadata": {},
    "outputs": [
     {
@@ -225,24 +212,57 @@
        "Name: Label, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = sms_random.iloc[int(size/100*80):]\n",
+    "test = sms_random.iloc[int(size/100*80):].copy()\n",
     "test.reset_index()\n",
     "test['Label'].value_counts(normalize=True) * 100"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03d64e03",
+   "metadata": {},
+   "source": [
+    "We can see that the two datasets we extracted have approximately the same proportion of spam and non-spam messages as the original dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40dfa7fe",
+   "metadata": {},
+   "source": [
+    "## Letter Case and Punctuation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35fbe4a0",
+   "metadata": {},
+   "source": [
+    "To calculate all these probabilities, we'll first need to perform a bit of data cleaning to bring the data in a format that will allow us to extract easily all the information we need. \n",
+    "\n",
+    "We'll start with: \n",
+    "- All words in the vocabulary are in lower case, so \"SECRET\" and \"secret\" come to be considered to be the same word.\n",
+    "- Punctuation is not taken into account anymore (for instance, we can't look at the table and conclude that the first message initially had three exclamation marks)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bdc0a42",
+   "id": "dfe5d699",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "training['SMS'] = training['SMS'].str.replace('\\W', ' ', regex=True)\n",
+    "training['SMS'] = training['SMS'].str.replace('\\s{2}', ' ', regex=True)\n",
+    "training['SMS'] = training['SMS'].str.lower().copy()\n",
+    "training['SMS']"
+   ]
   }
  ],
  "metadata": {
