4. Creating the Vocabulary

--- a/Building-a-spam-filter-with-naive-bayes/basic.ipynb
+++ b/Building-a-spam-filter-with-naive-bayes/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a56633cc",
+   "id": "529791ed",
    "metadata": {},
    "source": [
     "# Building a Spam Filter with Naive Bayes\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4971417",
+   "id": "0ac48536",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c88af916",
+   "id": "f62df90d",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2767d737",
+   "id": "d1ae792f",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2375f6f3",
+   "id": "412a6e9d",
    "metadata": {},
    "source": [
     "## Training and Test Set\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c218c3ed",
+   "id": "77857321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b6216fec",
+   "id": "4f625234",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3fd7a455",
+   "id": "ed76aefb",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03d64e03",
+   "id": "9b4ed963",
    "metadata": {},
    "source": [
     "We can see that the two datasets we extracted have approximately the same proportion of spam and non-spam messages as the original dataset."
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40dfa7fe",
+   "id": "a653bfe5",
    "metadata": {},
    "source": [
     "## Letter Case and Punctuation"
@@ -241,27 +241,92 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35fbe4a0",
+   "id": "3383331a",
    "metadata": {},
    "source": [
     "To calculate all these probabilities, we'll first need to perform a bit of data cleaning to bring the data in a format that will allow us to extract easily all the information we need. \n",
     "\n",
     "We'll start with: \n",
-    "- All words in the vocabulary are in lower case, so \"SECRET\" and \"secret\" come to be considered to be the same word.\n",
-    "- Punctuation is not taken into account anymore (for instance, we can't look at the table and conclude that the first message initially had three exclamation marks)."
+    "- All words in the vocabulary are in lower case, so `SECRET` and `secret` come to be considered to be the same word.\n",
+    "- Punctuation is not taken into account anymore."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dfe5d699",
+   "execution_count": 9,
+   "id": "91435ed5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1078                          yep by the pretty sculpture\n",
+       "4028          yes princess are you going to make me moan \n",
+       "958                            welp apparently he retired\n",
+       "4642                                              havent \n",
+       "4674    i forgot 2 ask ü all smth there s a card on da...\n",
+       "                              ...                        \n",
+       "4255                 how about clothes jewelry and trips \n",
+       "1982    sorry i ll call later in meeting any thing rel...\n",
+       "5180    babe i fucking love you too you know fuck it w...\n",
+       "4020    u ve been selected to stay in 1 of 250 top bri...\n",
+       "371     hello my boytoy geeee i miss you already and i...\n",
+       "Name: SMS, Length: 4457, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training['SMS'] = training['SMS'].str.replace('\\W', ' ', regex=True)\n",
     "training['SMS'] = training['SMS'].str.replace('\\s{2}', ' ', regex=True)\n",
     "training['SMS'] = training['SMS'].str.lower().copy()\n",
     "training['SMS']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acda9cd8",
+   "metadata": {},
+   "source": [
+    "## Creating the Vocabulary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "43c271ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " 'set',\n",
+       " '945',\n",
+       " 'uve',\n",
+       " 'sack',\n",
+       " 'private',\n",
+       " 'stranger',\n",
+       " '9280114',\n",
+       " 'wake',\n",
+       " 'norcorp']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocabulary = []\n",
+    "for sms in training['SMS'].str.split(' '):\n",
+    "    for word in sms:\n",
+    "        vocabulary.append(word)\n",
+    "vocabulary = list(set(vocabulary))\n",
+    "vocabulary[:10]"
    ]
   }
  ],
