--- a/Building-a-spam-filter-with-naive-bayes/basic.ipynb
+++ b/Building-a-spam-filter-with-naive-bayes/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d651a6b7",
+   "id": "2e979928",
    "metadata": {},
    "source": [
     "# Building a Spam Filter with Naive Bayes\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5ebdc6ee",
+   "id": "c384db5a",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "07c742d1",
+   "id": "53f922cf",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3dfb5823",
+   "id": "ebc4d4cb",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1269eb",
+   "id": "fc4ad464",
    "metadata": {},
    "source": [
     "## Training and Test Set\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d489d612",
+   "id": "c72b42a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d158e57d",
+   "id": "da9fd1dd",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "39a658be",
+   "id": "f8d905e5",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d08fad9",
+   "id": "78e21554",
    "metadata": {},
    "source": [
     "We can see that the two datasets we extracted have approximately the same proportion of spam and non-spam messages as the original dataset."
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a93b4f99",
+   "id": "5bb1c343",
    "metadata": {},
    "source": [
     "## Letter Case and Punctuation"
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd41f0d",
+   "id": "fc81e311",
    "metadata": {},
    "source": [
     "To calculate all the probabilities, we'll first need to perform a bit of data cleaning to bring the data in a format that will allow us to extract easily all the information we need. \n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7b2514d1",
+   "id": "686ce4d4",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e29410f9",
+   "id": "f5e20896",
    "metadata": {},
    "source": [
     "## Creating the Vocabulary\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1ba16d36",
+   "id": "14997798",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcbbbbdc",
+   "id": "c69c77e8",
    "metadata": {},
    "source": [
     "## The Final Training Set"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d659ef2c",
+   "id": "9454cb74",
    "metadata": {},
    "source": [
     "Now we're going to use the vocabulary to make the data transformation we need:\n",
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fc2622b0",
+   "id": "9e2b3d4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "470ffe03",
+   "id": "9454ece6",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "529ffe90",
+   "id": "1f670f3e",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa37f7d0",
+   "id": "3015124d",
    "metadata": {},
    "source": [
     "## Calculating Constants First\n",
@@ -1123,16 +1123,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437b0fe4",
+   "id": "f8aa600e",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "P(Spam | w_1,w_2, ..., w_n) \\propto P(Spam) \\cdot \\prod_{i=1}^{n}P(w_i|Spam)\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36190e76",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "P(Ham | w_1,w_2, ..., w_n) \\propto P(Ham) \\cdot \\prod_{i=1}^{n}P(w_i|Ham)\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dfdd314",
    "metadata": {},
    "source": [
     "Also, to calculate P(wi|Spam) and P(wi|Ham) inside the formulas above, recall that we need to use these equations:"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab6e17e1",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "P(w_i|Spam) = \\frac{N_{w_i|Spam} + \\alpha}{N_{Spam} + \\alpha \\cdot N_{Vocabulary}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1e05c0d",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "P(w_i|Ham) = \\frac{N_{w_i|Ham} + \\alpha}{N_{Ham} + \\alpha \\cdot N_{Vocabulary}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c618af2b",
+   "metadata": {},
+   "source": [
+    "Some of the terms in the four equations above will have the same value for every new message. As a start, let's first calculate:\n",
+    "\n",
+    "- P(Spam) and P(Ham)\n",
+    "- NSpam, NHam, NVocabulary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "086c7f29",
+   "id": "cf575803",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "462119f2",
+   "id": "14d4efe2",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9974084d",
+   "id": "a35e3a04",
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "48a0ef3a",
+   "id": "3171b030",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f6a06073",
+   "id": "c3b7f11e",
    "metadata": {},
    "outputs": [
     {
@@ -1244,11 +1295,63 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "da934dda",
+   "id": "a41396d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "alpha = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d16a7cc8",
+   "metadata": {},
+   "source": [
+    "## Calculating Parameters\n",
+    "\n",
+    "For P(wi|Spam) and P(wi|Ham) will vary depending on the individual words. For instance, P(\"secret\"|Spam) will have a certain probability value, while P(\"cousin\"|Spam) or P(\"lovely\"|Spam) will most likely have other values.\n",
+    "\n",
+    "Although both P(wi|Spam) and P(wi|Ham) vary depending on the word, the probability for each individual word is constant for every new message.\n",
+    "\n",
+    "For instance, let's say we receive two new messages:\n",
+    "\n",
+    "- \"secret code\"\n",
+    "- \"secret party 2night\"\n",
+    "\n",
+    "We'll need to calculate P(\"secret\"|Spam) for both these messages, and we can use the training set to get the values.\n",
+    "\n",
+    "In more technical language, the probability values that P(wi|Spam) and P(wi|Ham) will take are called parameters.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "8f63bf1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spam_parameters = {word: 0 for word in vocabulary}\n",
+    "ham_parameters = {word: 0 for word in vocabulary}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "c59276ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spam_messages = training_final[training_final['Label'] == 'spam']\n",
+    "ham_messasges = training_final[training_final['Label'] == 'ham']\n",
+    "\n",
+    "for word in vocabulary:\n",
+    "    n_word_spam = spam_messages[word].sum()\n",
+    "    p_word_given_spam = (n_word_spam + alpha) / (n_spam + (alpha * n_vocabulary))\n",
+    "    spam_parameters[word]  = p_word_given_spam\n",
+    "    \n",
+    "    n_word_ham = ham_messasges[word].sum()\n",
+    "    p_word_given_ham = (n_word_ham + alpha) / (n_ham + (alpha * n_vocabulary)) \n",
+    "    ham_parameters[word] = p_word_given_ham"
    ]
   }
  ],
